[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
rand = "0.8.4"
getrandom = { version = "0.2.8", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlBodyElement',
  'EventListener',
  'HtmlElement',
  'HtmlInputElement',
  'HtmlTextAreaElement',
  'InputEvent',
  'KeyboardEvent',
  'Location',
  'Node',
  'NodeList',
  'Storage',
  'Window',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response'
]